--- a/production/index.html
+++ b/production/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width; maximum-scale=1; minimum-scale=1;"> 
     <title>Lviv Secure And Warm</title>
     <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css" >
