--- a/production/teplovi-nasosy.html
+++ b/production/teplovi-nasosy.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1">
     <title>Lviv Secure And Warm</title>
     <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css" >
@@ -20,7 +21,7 @@
         <section class="navigation">
           <div class="nav-container">
             <div class="brand">
-              <a href="#!"></a>
+              <a href="#!">Телефон: 093 449 84 68</a>
             </div>
             <nav>
               <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -83,17 +84,12 @@
    </div>
    <div id="main-info">
    <h1>Теплові насоси Повітря-повітря </h1>
-    <div id="main-info-article">Тепловий насос «повітря-повітря» працює за принципом кондиціонера, розгорнутого у зворотний бік: він забирає тепло у
-      більш холодного повітря, знижуючи її температуру, і віддає його в опалювальне приміщення.<br/>
-
+    <div id="main-info-article">
 В основі процесу теплопередачі лежить властивість холодоагенту знижувати температуру при розширенні. При цьому її значення стає нижче значення
 температури навколишнього середовища, що призводить до відбору тепла
 з навколишнього повітря (згадайте приклад з охолодженим в морозильній камері тілом, винесеним на морозне повітря: його температура підвищується).<br/>
 <p>При подальшому стисненні температура хладагента різко зростає, в результаті чого створюються ідеальні умови для передачі теплової енергії опалювального приміщення. При багаторазовому повторенні циклів відбувається перенесення теплової енергії від зовнішнього повітря в приміщення, що забезпечує ефективний обігрів.
 
-Найбільше поширення отримали насоси, отапливающие приміщення з допомогою потоків нагрітого повітря. Вони відрізняються швидкодією і високою ефективністю, але не забезпечують звичний для опалювальних приладів супутній підігрів води для господарських потреб.
-
-У зв’язку з цим деякі виробники пропонують також і теплові насоси «повітря-вода», в яких тепло, що виділяється при стиску холодоагенту, використовується для нагріву води.
 </div>
 
      <!--input type="button" value="Категорія" id="item-details" onclick="window.location.href='test.html';" -->
