--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <header>
         <div id = "main-header">
-          <div id ="logo-img">LOGO HERE<img></img></div>
+          <div id ="logo-img"><img></img></div>
           <div id ="logo-info">Системи "Розумний Дім, Економне Оплення, Відеонагляд"</div>
           <div id ="logo-contacts"><li>тел: 093 449 84 68</li><li>тел: 093 449 84 68</li></div>
         </div>
