--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width; maximum-scale=1; minimum-scale=1;">
-    <title>Lviv Secure And Warm</title>
+    <meta name="description" content="Теплоком плюс: Установка, розрахунок та оптимізація систем опалення, водопостачання, кондиціонування." />
+
+    <title>Теплоком Плюс: Опалення, водопостачання, водовідвення, вентилція, кондиціонування.</title>
     <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css" >
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,8 +17,8 @@
       <header>
         <div id = "main-header">
           <div id ="logo-img"><img></img></div>
-          <div id ="logo-info">Системи "Розумний Дім, Економне Оплення, Відеонагляд"</div>
-          <div id ="logo-contacts"><li>тел: 093 449 84 68</li><li>тел: 093 449 84 68</li></div>
+          <div id ="logo-info">Системи опалення, водопостачання та водовідведення.</div>
+          <div id ="logo-contacts"><li>тел: 093 449 84 68</li><li>тел: 099 663 16 94</li></div>
         </div>
         <section class="navigation">
           <div class="nav-container">
@@ -27,42 +29,55 @@
               <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
               <ul class="nav-list">
                 <li>
-                  <a href="#!">На Головну</a>
+                  <a href="index.html">На Головну</a>
                 </li>
 
                 <li>
-                  <a href="#!">Розумний дім</a>
+                  <a href="#!">Опалення</a>
                   <ul class="nav-dropdown">
                     <li>
-                      <a href="#!">Відеонагляд</a>
+                      <a href="#!">Газові котли</a>
                     </li>
                     <li>
-                      <a href="#!">Безпека</a>
-                    </li>
-                    <li>
-                      <a href="#!">Комфорт</a>
-                    </li>
-
-                  </ul>
-                </li>
-
-                <li>
-                  <a href="#!">Економне опалення</a>
-                  <ul class="nav-dropdown">
-                    <li>
-                      <a href="teplovi-nasosy.html">Теплові насоси</a>
-                    </li>
-                    <li>
-                      <a href="#!">Вакумні сонячні колектори</a>
+                      <a href="#!">Електричні котли</a>
                     </li>
                     <li>
                       <a href="#!">Твердопаливні котли</a>
                     </li>
+                    <li>
+                      <a href="teplovi-nasosy.html">Теплові насоси</a>
+                    </li>
+                    <li>
+                      <a href="#!">Дистанційний контроль</a>
+                    </li>
                   </ul>
                 </li>
 
                 <li>
-                  <a href="#!">Прайс</a>
+                  <a href="#!">Інсталяція систем</a>
+                  <ul class="nav-dropdown">
+                    <li>
+                      <a href="#">Водопостачання</a>
+                    </li>
+
+                    <li>
+                      <a href="#!">Водовідведення</a>
+                    </li>
+                    <li>
+                      <a href="#!">Дистанційний контроль</a>
+                    </li>
+                    <li>
+                      <a href="#!">Вентиляція</a>
+                    </li>
+
+                    <li>
+                      <a href="#!">Вакумні сонячні колектори</a>
+                    </li>
+                  </ul>
+                </li>
+
+                <li>
+                  <a href="#!">Перелік послуг</a>
                 </li>
 
                 <li>
@@ -75,7 +90,8 @@
     </header>
     <!--main parallax-window -->
      <div class="main-banner">
-     <div class="parallax-window" data-parallax="scroll" data-image-src="https://i.ytimg.com/vi/S2Bp3dwo8fA/maxresdefault.jpg">
+       <div class="parallax-window" data-parallax="scroll" data-image-src="img/Untitled-22.jpg">
+     <!--div class="parallax-window" data-parallax="scroll" data-image-src="https://i.ytimg.com/vi/S2Bp3dwo8fA/maxresdefault.jpg"-->
        <!--div id="info-box">Передові технології у вас вдома!</div>
        <div id="text-info">093 449 84 68</div-->
 
@@ -83,7 +99,7 @@
 
    </div>
    <div id="main-info">
-   <h1>Системи "Розумний дім"</h1>
+   <h1>Теплоком Плюс пропонує:</h1>
     <div id="main-info-article">На сьогодні технології займають велике місце в нашому житті. На допомогу Вашому домашньому комфорту та безпеці приходить система "Розумний Дім".
     Покладати на господаря житла управління всіма системами стає незручно, невигідно і небезпечно. Комплексна система керування житлом «розумний дім»
      бере на себе всю рутинну роботу з вирішення цієї заплутаної справи,залишаючи людині тільки прийняття головних, «базових» рішень.Легко та в один "Клік".
